test/cases/parser/WrongTerm.errors
src/WrongTerm.b:3:18: Syntax error (expected term)
