test/cases/parser/WrongTerm.b
module Main
interface {
  const x: i32 = )
